--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,3 +9,7 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     = yield
+    .app-title.navbar-expand-md.navbar-light.dg-light
+      .navbar-brand Taskleaf
+    .container
+      =yield
