--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -1,2 +1,11 @@
-h1 Tasks#edit
-p Find me in app/views/tasks/edit.html.slim
+h1 タスクの編集
+.nav.justify-content-end
+  = link_to '一覧', task_path, class: 'nav-link'
+
+= form_with model: @task, local: true do |f|
+  .form_group
+    = f.label :name
+    = f.text_field :name, class: 'from-control', id:'task_name'
+  .form_group
+    = f.label :description
+    = f.text_area :description, rows: 5, class: 'from-control', id:'task_name'
