♻️  Commonize the screen using partials

--- a/app/views/tasks/edit.html.slim
+++ b/app/views/tasks/edit.html.slim
@@ -2,11 +2,4 @@ h1 タスクの編集
 .nav.justify-content-end
   = link_to '一覧', task_path, class: 'nav-link'
 
-= form_with model: @task, local: true do |f|
-  .form_group
-    = f.label :name
-    = f.text_field :name, class: 'from-control', id:'task_name'
-  .form_group
-    = f.label :description
-    = f.text_area :description, rows: 5, class: 'from-control', id:'task_description'
-  = f.submit nil, class: 'btn btn-primary'
+= render partial: 'form', locals: {task:@task}
