--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,14 +2,14 @@ doctype html
 html
   head
     title
-      | Taskleaf
+      | 作業通話ちゃんねる
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .app-title.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand Taskleaf
+      .navbar-brand 作業通話ちゃんねる
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
