--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -8,8 +8,10 @@ html
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    .app-title.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand 作業通話ちゃんねる
+    .title
+    = link_to'/',class: 'img' do
+      | 作業通話ちゃんねる
+      span
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
