--- a/app/views/tasks/show.html.slim
+++ b/app/views/tasks/show.html.slim
@@ -1,4 +1,4 @@
-h1 タスクの詳細
+h1 #{@task.name}さんの募集内容
 .nav.jstify-content-end
   = link_to '一覧', tasks_path, class: 'nav-link'
 table.table.table-hover
