--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,17 @@ html
     = link_to'/',class: 'img' do
       | 作業通話ちゃんねる
       span
+    .app-title.navbar.navbar-expand-md.navbar-light.bg-light
+      .navbar-brand Taskleaf
+
+      ul.navbar-nav.ml-auto
+        - if current_user
+          li.nav-item= link_to 'タスク一覧', task_path, class: 'nav-link'
+          li.nav-item= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
+          li.nav-item= link_to 'ログイン', logout_path, method: :delete, class: 'nav-link'
+        - else
+          li.nav-item= link_to 'ログイン', logout_path, class: 'nav-link'
+
     .container
       - if flash.notice.present?
         .alert.alert-success= flash.notice
