♻️Change name navbar-brand

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
       | 作業通話ちゃんねる
       span
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand Taskleaf
+      .navbar-brand 作業通話ちゃんねる
 
       ul.navbar-nav.ml-auto
         - if current_user
