✨Add Logo image

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,7 +10,8 @@ html
   body
     .title
     = link_to'/',class: 'img' do
-      | 作業通話ちゃんねる
+      = image_tag "gokinjyoculb.gif"
+      | インターネットご近所クラブ
       span
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
       .navbar-brand 作業通話ちゃんねる
