✨Add Logo images

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,11 +10,10 @@ html
   body
     .title
     = link_to'/',class: 'img' do
-      = image_tag "gokinjyoculb.gif"
-      | インターネットご近所クラブ
+      = image_tag "logo.png"
       span
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand 作業通話ちゃんねる
+      .navbar-brand 最高なインターネットを作るコミュニティサイトです
 
       ul.navbar-nav.ml-auto
         - if current_user
