--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,15 +5,14 @@ html
       | 作業通話ちゃんねる
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     .title
     = link_to'/',class: 'img' do
       = image_tag "logo.png"
       span
     .app-title.navbar.navbar-expand-md.navbar-light.bg-light
-      .navbar-brand 最高なインターネットを作るコミュニティサイトです
+      .site-news
+        br 最高なインターネットを作るコミュニティサイトです
 
       ul.navbar-nav.ml-auto
         - if current_user
